2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in: Remove --with-gtk2 option.

2005-01-28 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_view/gimv_xine.c, plugins/image_view/gimv_xine.h,
	  plugins/image_view/gimv_xine_priv.c,
	  plugins/image_view/gimv_xine_priv.h,
	  plugins/image_view/prefs_xine.c:
	Enabled to choose audio & video drivers for Xine view.

2005-01-07 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb_win.c: Fixed compile error on Gtk+-1.2.
	Thanks reporting > shippo-san

2004-12-29 Takuro Ashie <ashie@homa.ne.jp>

	* Version-0.2.27

2004-12-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb_win.[ch], po/ja.po: Added "Slideshow Options".

2004-12-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c: Don't change the file to the next if the current
	file is movie and playing while slideshow.
	This patch is contributed by Christian Hammers
	<lathspell@users.sourceforge.net>. Thanks!

2004-12-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb_win.c: Added randamized slideshow.
	This patch is contributed by Christian Hammers
	<lathspell@users.sourceforge.net>. Thanks!

2004-12-20 Takuro Ashie <ashie@homa.ne.jp>

	* src/dirview2.c: Do not scroll the directory view automatically when
	the selected directory is in the view.
	Thank you for your suggestion! > sholmif

2004-12-20 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_view.c: The bug that sometime same files are appeared
	numbers of times on same thumbnail view has been fixed.
	(Bug #1073316 Thanks reporting > shlomif).

2004-12-20 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/archiver/tar-ext.c, plugins/archiver/zip-ext.c:
	Escape path of files to extract.
	(Bug #908528 & #1074746. Thanks reporting > magnade and nobody)	

2004-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dupl_finder.c: Sorry, wrong hash function was used...

2004-10-04 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_view/Makefile.am, plugins/image_view/image_view_xine.c: